--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
+  "framework": null,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "functions": {
     "api/*.ts": {
       "runtime": "@vercel/node@3"
     }
-  },
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
-  ]
+  }
 }
