--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "framework": null,
   "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "functions": {
-    "api/*.ts": {
-      "runtime": "@vercel/node@3"
-    }
-  }
+  "installCommand": "npm install"
 }
