--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
-  "framework": null,
-  "buildCommand": "npm run build",
-  "installCommand": "npm install"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["src/**/*.ts"]
+      }
+    }
+  ]
 }
