--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["src/**/*.ts"]
-      }
-    }
-  ]
+  "version": 2
 }
