--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "openai": "^4.77.0",
+    "@openai/agents": "^0.1.0",
     "next": "14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
